src/objects/Apttus_Billing__BillingSchedule__c.object
<CustomObject>
    <description>Represents a billing schedule for a product or service</description>
    <fields>
        <fullName>APTS_AddToExternalOrderlineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field will be updated by the batch job, for consumption type BS when BS is updated with usage input</description>
        <label>Add To External Order line Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Admin_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admin Order Line Item</label>
        <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
        <relationshipLabel>Billing Schedules (Order Line Item)</relationshipLabel>
        <relationshipName>Billing_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Number__c</fullName>
        <formula>APTS_Agreement__r.Apttus__Agreement_Number__c &amp; &quot;.&quot; &amp; TEXT(CEILING(APTS_Agreement__r.Apttus__Version_Number__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will refer to Agreement object.</description>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Billing Schedules</relationshipLabel>
        <relationshipName>Billing_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Credit_Proposal_XC09_Block__c</fullName>
        <description>Credit BillingSchedules will be skipped in creating XC09 orders if this field is set to TRUE.</description>
        <formula>Apttus_Billing__OrderLineItemId__r.APTS_Credit_Proposal_XC09_Block__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Credit BillingSchedules will be skipped in creating XC09 orders if this field is set to TRUE.</inlineHelpText>
        <label>Credit Proposal (XC09 Block)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Delta_amount_added__c</fullName>
        <label>Delta amount added</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Apttus_Billing__Invoice__c</referenceTo>
        <relationshipLabel>Billing Schedules</relationshipLabel>
        <relationshipName>Billing_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__AgreementLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated agreement line item</description>
        <inlineHelpText>ID of the associated agreement line item</inlineHelpText>
        <label>Agreement Line Item</label>
        <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
        <relationshipLabel>Billing Schedules</relationshipLabel>
        <relationshipName>BillingSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__AssetLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated asset line item</description>
        <inlineHelpText>ID of the associated asset line item</inlineHelpText>
        <label>Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Billing Schedules</relationshipLabel>
        <relationshipName>BillingSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__BillToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the bill to account</description>
        <inlineHelpText>ID of the bill to account</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Schedules</relationshipLabel>
        <relationshipName>BillingSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__BillingDayOfMonth__c</fullName>
        <description>The Billing Day of Month based on the alignment settings of the affiliate Billing Preference at the time of Schedule creation.</description>
        <inlineHelpText>The Billing Day of Month based on the alignment settings of the affiliate Billing Preference at the time of Schedule creation.</inlineHelpText>
        <label>Billing Day of Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__BillingPlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing plan</description>
        <inlineHelpText>ID of the associated billing plan</inlineHelpText>
        <label>Billing Plan</label>
        <referenceTo>Apttus_Config2__BillingPlan__c</referenceTo>
        <relationshipLabel>Billing Schedules</relationshipLabel>
        <relationshipName>BillingSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__BillingPlanItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing plan item</description>
        <inlineHelpText>ID of the associated billing plan item</inlineHelpText>
        <label>Billing Plan Item</label>
        <referenceTo>Apttus_Config2__BillingPlanItem__c</referenceTo>
        <relationshipLabel>Billing Schedules</relationshipLabel>
        <relationshipName>BillingSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__BillingRule__c</fullName>
        <description>The Billing Rule associated with the Price List Item</description>
        <inlineHelpText>The Billing Rule associated with the Price List Item</inlineHelpText>
        <label>Billing Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill In Advance</fullName>
                </value>
                <value>
                    <fullName>Bill In Arrears</fullName>
                </value>
                <value>
                    <fullName>Milestone Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Category__c</fullName>
        <description>The category associated with the schedule</description>
        <inlineHelpText>The category associated with the schedule</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fee</fullName>
                    <default>true</default>
                    <label>Fee</label>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Description__c</fullName>
        <description>The schedule description</description>
        <inlineHelpText>The schedule description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__DiscountAmount__c</fullName>
        <description>The discount amount. Only applicable for discount schedules</description>
        <inlineHelpText>The discount amount. Only applicable for discount schedules</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__FeeAmount__c</fullName>
        <description>The fee amount. Only applicable for fee schedules</description>
        <inlineHelpText>The fee amount. Only applicable for fee schedules</inlineHelpText>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__HideInvoiceDisplay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the item would be hidden in the invoice display.</description>
        <inlineHelpText>Indicates whether the item would be hidden in the invoice display.</inlineHelpText>
        <label>Hide Invoice Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InvoiceItemGroup__c</fullName>
        <description>The invoice item group the schedule belongs to. Multiple billing schedules may be grouped into a single invoice line item.</description>
        <inlineHelpText>The invoice item group the schedule belongs to. Multiple billing schedules may be grouped into a single invoice line item.</inlineHelpText>
        <label>Invoice Item Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InvoicedScheduleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Id of the invoiced and superseded Billing Schedule that is the source of the credit.</description>
        <inlineHelpText>The Id of the invoiced and superseded Billing Schedule that is the source of the credit.</inlineHelpText>
        <label>Invoiced Schedule Id</label>
        <referenceTo>Apttus_Billing__BillingSchedule__c</referenceTo>
        <relationshipLabel>Billing Schedules</relationshipLabel>
        <relationshipName>BillingSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__IsSuperseded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will initially be false and will be set to true when the Billing Schedule is superseded due to a Cancellation or Amendment to an Asset Line Item.</description>
        <inlineHelpText>Will initially be false and will be set to true when the Billing Schedule is superseded due to a Cancellation or Amendment to an Asset Line Item.</inlineHelpText>
        <label>Is Superseded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__LegalEntityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Id of the optional Legal Entity. A value of null implies there is no corresponding Legal Entity.</description>
        <inlineHelpText>The Id of the optional Legal Entity.</inlineHelpText>
        <label>Legal Entity</label>
        <referenceTo>Apttus_Config2__LegalEntity__c</referenceTo>
        <relationshipLabel>Billing Schedules</relationshipLabel>
        <relationshipName>BillingSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__LocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated Account Location</description>
        <inlineHelpText>ID of the associated Account Location</inlineHelpText>
        <label>Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Billing Schedules</relationshipLabel>
        <relationshipName>Billing_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__OrderLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ID of the associated Order Line Item</description>
        <inlineHelpText>The ID of the associated Order Line Item</inlineHelpText>
        <label>Order Line Item</label>
        <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
        <relationshipLabel>Billing Schedules</relationshipLabel>
        <relationshipName>Billing_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated Payment Term</description>
        <inlineHelpText>ID of the associated Payment Term</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Billing Schedules</relationshipLabel>
        <relationshipName>Billing_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PeriodEndDate__c</fullName>
        <description>The billing period end date</description>
        <inlineHelpText>The billing period end date</inlineHelpText>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PeriodStartDate__c</fullName>
        <description>The billing period start date</description>
        <inlineHelpText>The billing period start date</inlineHelpText>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ProposalLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal line item</description>
        <inlineHelpText>ID of the associated quote/proposal line item</inlineHelpText>
        <label>Quote Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Billing Schedules</relationshipLabel>
        <relationshipName>BillingSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Quantity__c</fullName>
        <description>The product or service quantity</description>
        <inlineHelpText>The product or service quantity</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ReadyForInvoiceDate__c</fullName>
        <description>The date when the order is ready for generating an invoice</description>
        <inlineHelpText>The date when the order is ready for generating an invoice</inlineHelpText>
        <label>Ready For Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ReadyForInvoicingDate__c</fullName>
        <description>The time when the order is ready for invoicing</description>
        <inlineHelpText>The time when the order is ready for invoicing</inlineHelpText>
        <label>Ready For Invoicing Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ShipToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ship-to Account</description>
        <inlineHelpText>ID of the ship-to Account</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Schedules (Ship To)</relationshipLabel>
        <relationshipName>Billing_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Status__c</fullName>
        <description>The schedule status</description>
        <inlineHelpText>The schedule status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Milestone</fullName>
                </value>
                <value>
                    <fullName>Pending Billing</fullName>
                    <default>true</default>
                    <label>Pending Billing</label>
                </value>
                <value>
                    <fullName>Pending Invoiced</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Invoiced Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Subcategory__c</fullName>
        <description>The subcategory associated with the schedule</description>
        <inlineHelpText>The subcategory associated with the schedule</inlineHelpText>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Billing__Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Discount</fullName>
                </value>
                <value>
                    <fullName>Channel Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__SupersededScheduleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Id of the Billing Schedule that is being superseded by this Billing schedule.  For a new Billing Schedule this Id will be null.</description>
        <inlineHelpText>This is the Id of the Billing Schedule that is being superseded by this Billing schedule.  For a new Billing Schedule this Id will be null.</inlineHelpText>
        <label>Superseded Billing Schedule</label>
        <referenceTo>Apttus_Billing__BillingSchedule__c</referenceTo>
        <relationshipLabel>Superseded Billing Schedules</relationshipLabel>
        <relationshipName>SupersededScheduleId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TaxAmount__c</fullName>
        <description>The tax amount. Only applicable for tax schedules</description>
        <inlineHelpText>The tax amount. Only applicable for tax schedules</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Type__c</fullName>
        <description>The schedule type</description>
        <inlineHelpText>The schedule type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
                <value>
                    <fullName>Forecasted</fullName>
                </value>
                <value>
                    <fullName>Informational</fullName>
                </value>
                <value>
                    <fullName>Contracted</fullName>
                    <default>true</default>
                    <label>Contracted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Billing Schedule</label>
    <listViews>
        <fullName>Apttus_Billing__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BS-{00000000}</displayFormat>
        <label>Schedule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>